src/content-script/styles.scss
@keyframes gpt-pulse {
  0%,
  100% {
    opacity: 1;
  }
  50% {
    opacity: 0.8;
  }
}

.chat-gpt-suggestionsBox {
  display: flex;
  z-index: 99;
  position: absolute;
  direction: ltr;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background-color: white;
  border: 0px solid;
  padding: 0;
}

.chat-gpt-rewrite {
  width: 100%;
  border: 1px solid rgb(230, 232, 238);
  display: flex;
  position: relative;
  min-width: 330px;
  box-shadow: rgba(63, 62, 77, 0.2) 0px 2px 14px 0px;
  transition: height 0.1s ease 0s;
  border-radius: 3px;
  flex-direction: column;
  padding: 10px;
  background-color: rgb(255, 255, 255);
}

.chat-gpt-rewrite:hover {
  opacity: 0.75;
}

.chat-gpt-button {
  width: 28px;
  height: 28px;
  display: flex;
  z-index: 20000000000;
  position: relative;
  box-shadow: 0 2px 14px 0 rgba(63, 62, 77, 0.20);
  transition: all 0.5s ease;
  align-items: center;
  border-color: rgb(214, 216, 222);
  border-style: solid;
  border-width: 1px;
  border-radius: 15px;
  justify-content: center;
  background-color: white;
  padding: 0;
}

.chat-gpt-button:hover {
  opacity: 0.75;
}

.gpt-loading {
  color: #b6b8ba;
  animation: gpt-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}

